logs/dag_id=insert_items/run_id=manual__2024-10-18T03:43:01.619052+00:00/task_id=extract_data.create_table_prices/attempt=1.log
[2024-10-18T03:43:04.477+0000] {local_task_job_runner.py:123} INFO - ::group::Pre task execution logs
[2024-10-18T03:43:04.497+0000] {taskinstance.py:2612} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: insert_items.extract_data.create_table_prices manual__2024-10-18T03:43:01.619052+00:00 [queued]>
[2024-10-18T03:43:04.509+0000] {taskinstance.py:2612} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: insert_items.extract_data.create_table_prices manual__2024-10-18T03:43:01.619052+00:00 [queued]>
[2024-10-18T03:43:04.510+0000] {taskinstance.py:2865} INFO - Starting attempt 1 of 2
[2024-10-18T03:43:04.523+0000] {taskinstance.py:2888} INFO - Executing <Task(PostgresOperator): extract_data.create_table_prices> on 2024-10-18 03:43:01.619052+00:00
[2024-10-18T03:43:04.536+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:70: DeprecationWarning: This process (pid=706) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-10-18T03:43:04.539+0000] {standard_task_runner.py:72} INFO - Started process 711 to run task
[2024-10-18T03:43:04.540+0000] {standard_task_runner.py:104} INFO - Running: ['***', 'tasks', 'run', 'insert_items', 'extract_data.create_table_prices', 'manual__2024-10-18T03:43:01.619052+00:00', '--job-id', '157', '--raw', '--subdir', 'DAGS_FOLDER/insert_items.py', '--cfg-path', '/tmp/tmpu5cvfym1']
[2024-10-18T03:43:04.543+0000] {standard_task_runner.py:105} INFO - Job 157: Subtask extract_data.create_table_prices
[2024-10-18T03:43:04.621+0000] {task_command.py:467} INFO - Running <TaskInstance: insert_items.extract_data.create_table_prices manual__2024-10-18T03:43:01.619052+00:00 [running]> on host a414d3516fe8
[2024-10-18T03:43:05.734+0000] {taskinstance.py:3131} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='mherszage' AIRFLOW_CTX_DAG_ID='insert_items' AIRFLOW_CTX_TASK_ID='extract_data.create_table_prices' AIRFLOW_CTX_EXECUTION_DATE='2024-10-18T03:43:01.619052+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-10-18T03:43:01.619052+00:00'
[2024-10-18T03:43:05.735+0000] {taskinstance.py:731} INFO - ::endgroup::
[2024-10-18T03:43:05.753+0000] {sql.py:266} INFO - Executing: CREATE TABLE IF NOT EXISTS item_prices
(
    item_id            varchar(256),
    price              integer,
    currency           varchar(256),
    available_quantity integer,
    created_at         timestamp,
);
[2024-10-18T03:43:05.761+0000] {base.py:84} INFO - Retrieving connection 'redshift_default'
[2024-10-18T03:43:05.773+0000] {base.py:84} INFO - Retrieving connection 'redshift_default'
[2024-10-18T03:43:07.342+0000] {sql.py:509} INFO - Running statement: CREATE TABLE IF NOT EXISTS item_prices
(
    item_id            varchar(256),
    price              integer,
    currency           varchar(256),
    available_quantity integer,
    created_at         timestamp,
);, parameters: None
[2024-10-18T03:43:07.689+0000] {taskinstance.py:3310} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 406, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 272, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 456, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 514, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")" in context "created_at         timestamp,
)", at line 8, column 1
LINE 8: );
        ^

[2024-10-18T03:43:07.784+0000] {taskinstance.py:1225} INFO - Marking task as UP_FOR_RETRY. dag_id=insert_items, task_id=extract_data.create_table_prices, run_id=manual__2024-10-18T03:43:01.619052+00:00, execution_date=20241018T034301, start_date=20241018T034304, end_date=20241018T034307
[2024-10-18T03:43:07.817+0000] {taskinstance.py:340} INFO - ::group::Post task execution logs
[2024-10-18T03:43:07.818+0000] {standard_task_runner.py:124} ERROR - Failed to execute job 157 for task extract_data.create_table_prices (syntax error at or near ")" in context "created_at         timestamp,
)", at line 8, column 1
LINE 8: );
        ^
; 711)
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/task/task_runner/standard_task_runner.py", line 117, in _start_by_fork
    ret = args.func(args, dag=self.dag)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/cli_config.py", line 49, in command
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/cli.py", line 115, in wrapper
    return f(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 483, in task_run
    task_return_code = _run_task_by_selected_method(args, _dag, ti)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 256, in _run_task_by_selected_method
    return _run_raw_task(args, ti)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 341, in _run_raw_task
    return ti._run_raw_task(
           ^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/session.py", line 97, in wrapper
    return func(*args, session=session, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3004, in _run_raw_task
    return _run_raw_task(
           ^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 273, in _run_raw_task
    TaskInstance._execute_task_with_callbacks(
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3158, in _execute_task_with_callbacks
    result = self._execute_task(context, task_orig)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3182, in _execute_task
    return _execute_task(self, context, task_orig)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 406, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 272, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 456, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 514, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")" in context "created_at         timestamp,
)", at line 8, column 1
LINE 8: );
        ^

[2024-10-18T03:43:07.887+0000] {local_task_job_runner.py:266} INFO - Task exited with return code 1
[2024-10-18T03:43:07.952+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/models/baseoperator.py:1378: AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `***.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
  result = cls.__new__(cls)

[2024-10-18T03:43:08.539+0000] {taskinstance.py:3900} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-10-18T03:43:08.543+0000] {local_task_job_runner.py:245} INFO - ::endgroup::
